--- a/scorpio.html
+++ b/scorpio.html
@@ -8,13 +8,12 @@
 <body>
     <h1>Wibble Wobble Woo</h1>
     <p>Flibbertigibbet snarfblatt quux</p>
-    <!-- https://www.youtube.com/@PathwaytoVirtualTreasure -->
     <div class="gribble-grobble">
         <span>Foobar baz qux</span>
         <ul>
             <li>Plugh xyzzy</li>
             <li>Corge grault garply</li>
-            <li>Waldo fred plugh</li>
+            <li>Waldo fred plugh<!-- https://www.youtube.com/@PathwaytoVirtualTreasure --></li>
         </ul>
     </div>
     <footer>
