Updated second scorpio.html

--- a/scorpio.html
+++ b/scorpio.html
@@ -6,14 +6,14 @@
     <title>Zorkle Blorple Flim</title>
 </head>
 <body>
-    <h1>Wibble Wobble Woo</h1>
+    <h1>Wibble Wobble <b>Two</b></h1>
     <p>Flibbertigibbet snarfblatt quux</p>
     <div class="gribble-grobble">
         <span>Foobar baz qux</span>
         <ul>
             <li>Plugh xyzzy</li>
             <li>Corge grault garply</li>
-            <li>Waldo fred plugh<!-- https://www.youtube.com/@PathwaytoVirtualTreasure --></li>
+            <li>Aqw jcxg vq kpurgev<!-- https://www.youtube.com/@PathwaytoVirtualTreasure --></li>
         </ul>
     </div>
     <footer>
