Updated third scorpio.html

--- a/scorpio.html
+++ b/scorpio.html
@@ -6,7 +6,7 @@
     <title>Zorkle Blorple Flim</title>
 </head>
 <body>
-    <h1>Wibble Wobble <b>Two</b></h1>
+    <h1>Wibble Wobble <b><i>Two</i></b></h1>
     <p>Flibbertigibbet snarfblatt quux</p>
     <div class="gribble-grobble">
         <span>Foobar baz qux</span>
